--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
     sdk: flutter
 
   http: ^0.12.0
+  location: ^1.4.1
   path_provider: ^0.4.1
   cupertino_icons: ^0.1.2
   connectivity: ^0.3.2
